--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
         <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+        <a href="##" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar end-->
